# sign-firmware

./: .gitignore  Cargo.toml  README.md  build.rs  partitions.csv  sdkconfig.defaults  shell.nix
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: eeprom.rs  lib.rs  main.rs  net.rs  printer.rs  schema.rs
src/net/: ble.rs  config.rs  http.rs  mod.rs  self_update.rs  ws.rs
