[package]
name = "sign-firmware"
version = "0.1.0"
authors = ["Jack Hogan <jackhogan11@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sign-firmware"
harness = false

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", features = [
    "esp32s3",
] }
esp-println = { version = "0.11.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", features = [
    "esp32s3",
    "phy-enable-usb",
    "utils",
    "wifi",
    "embassy-net",
    "async",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-12288"] }
embassy-sync = "0.6.0"
embassy-time = { version = "*", features = ["generic-queue"] }
embedded-hal = "1.0.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", features = [
    "esp32s3",
] }
palette = { version = "0.7.6", default-features = false, features = [
    "alloc",
    "libm",
] }
lightning-time = { version = "0.2.0", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
dotenvy_macro = "0.15.7"
embassy-net = { version = "*", features = [
    "dhcpv4",
    "dns",
    "log",
    "medium-ip",
    "proto-ipv4",
    "tcp",
    "udp",
] }
reqwless = { version = "*", default-features = false, features = [
    "log",
    "embedded-tls",
    "alloc",
] }
const-random = "0.1.18"
serde = { version = "1.0.210", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.128", default-features = false, features = [
    "alloc",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
embuild = "0.32.0"
