[package]
name = "sign-firmware"
version = "0.1.12"
authors = ["Jack Hogan <jackhogan11@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.espflash]
partition_table = "partitions.csv"

[[bin]]
name = "sign-firmware"
harness = false
test = false
doctest = false
bench = false

[dependencies]
# esp-backtrace = { version = "0.14.0", features = [
#     "esp32",
#     "exception-handler",
#     "panic-handler",
#     "println",
# ] }
# esp-idf-hal = { version = "0.44.1", default-features = false, features = ["alloc"] }
# esp-println = { version = "0.11.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
# esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git" }
# esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", features = [
#     "esp32",
#     # "phy-enable-usb",
#     "utils",
#     "wifi",
#     "embassy-net",
#     "async",
# ] }
# embassy-executor = { version = "0.6.0", features = ["nightly"] }
embassy-sync = "0.6.0"
embassy-time = { version = "*", features = ["generic-queue"] }
# embedded-hal = "1.0.0"
# static_cell = { version = "2.1.0", features = ["nightly"] }
palette = { version = "0.7.6", default-features = false, features = [
    "alloc",
    "libm",
] }
lightning-time = { version = "0.2.0", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = [
    "alloc",
    "clock",
] }
dotenvy_macro = "0.15.7"
serde = { version = "1.0.210", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.128" }
esp-idf-svc = { version = "0.49", default-features = false, features = [
    "std",
    "alloc",
    "libstart",
    "native",
    "nightly",
    "panic_handler",
    "embassy-sync",
    "embassy-time-driver",
    "critical-section",
] }
anyhow = { version = "1.0.88", default-features = false }
embedded-svc = { version = "0.28.0", features = ["nightly"] }
http = "1.1.0"
async-io = "2.3.4"
url = "2.5.2"
chrono-tz = "0.10.0"
semver = "1.0.23"
build-time = "0.1.3"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
embuild = "0.32.0"
